# Bobruskina_avs_HW2

Task_2_Bobruskina_avs/: CMakeLists.txt  ball.cpp  ball.h  container.cpp  container.h  figure.cpp  figure.h  main.cpp  parallelepiped.cpp  parallelepiped.h  rnd.h  tetrahedron.cpp  tetrahedron.h
Tests/test_1/: test01_out1.txt  test01_out2.txt
Tests/test_2/: test02.txt  test02_out1.txt  test02_out2.txt
Tests/test_3/: test03_out1.txt  test03_out2.txt
Tests/test_4/: test04.txt  test04_out1.txt  test04_out2.txt
Tests/test_5/: test05.txt  test05_out1.txt  test05_out2.txt
