cmake_minimum_required(VERSION 3.20)
project(Task_2_Bobruskina_avs)

set(CMAKE_CXX_STANDARD 17)

add_executable(Task_2_Bobruskina_avs
        main.cpp
        ball.cpp
        ball.h
        container.cpp
        container.h
        figure.cpp
        figure.h
        parallelepiped.cpp
        parallelepiped.h
        rnd.h
        tetrahedron.cpp
        tetrahedron.h)
